add evaluation cyclic shift and random sampling

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-05-11_resnet18_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-06-08_resnet18_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel_resnormTests.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,11 +62,11 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_05_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               []\n",
-      "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
+      "           participants_file:             2023_05_04_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_05_21_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 2026  -  label '1': 1450\n",
       "           types_of_recording:            combined_breaths\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -85,14 +85,18 @@
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
+      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
+      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
+      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
+      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
       "           model:                         ResNet\n",
       "           optimizer:                     Adam \n",
-      "           loss_function:                 BCEWithLogitsLoss\n",
+      "           loss_function:                 sigmoid_focal_loss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                24\n",
+      "           parameter runs:                17\n",
       "           folds per run:                 1\n",
-      "           epochs:                        400\n"
+      "           epochs:                        250\n"
      ]
     }
    ],
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -128,20 +132,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>AddGaussianNoise</th>\n",
+       "      <th>PitchShift</th>\n",
+       "      <th>TimeStretch</th>\n",
+       "      <th>Gain</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01</td>\n",
+       "      <td>'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2</td>\n",
+       "      <td>'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05</td>\n",
+       "      <td>'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "                                                     AddGaussianNoise  \\\n",
+       "0  'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01   \n",
+       "\n",
+       "                                                    PitchShift  \\\n",
+       "0  'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2   \n",
+       "\n",
+       "                                              TimeStretch  \\\n",
+       "0  'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05   \n",
+       "\n",
+       "                                                              Gain  \n",
+       "0  'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 83,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,21 +183,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel\n",
-      "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
+      "logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel\n",
+      "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_05_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': [],\n",
-       " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
+       " 'participants_file': '2023_05_04_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_05_21_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
+       " 'train_set_label_counts': \"label '0': 2026  -  label '1': 1450\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f10469501804126ae62627f989781f5",
+       "model_id": "9abfa9c4606f4d9eb8001e52994eac8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -244,20 +267,6 @@
       "           metric_used:                   loss\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\\evaluation_and_tracking.py:272: RuntimeWarning:\n",
-      "\n",
-      "Mean of empty slice\n",
-      "\n",
-      "C:\\Users\\Michi\\Anaconda3\\envs\\python_v3-8\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:1878: RuntimeWarning:\n",
-      "\n",
-      "Degrees of freedom <= 0 for slice.\n",
-      "\n"
      ]
     }
    ],
@@ -282,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 93,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33a0678bd837448d8e5d36121371b2b0",
+       "model_id": "aa5e0394f5f84e6c8d1d270b032bc2e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5623464f5a88462e93634927181c7c01",
+       "model_id": "3c1e38a7cf014c37aebc4701e9199075",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,14 +380,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "146b4ed7ee8e4910ad5ed40fa41fc242",
+       "model_id": "0ad9d12dcbe7478d99d7e24bd5844992",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -444,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 90,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -455,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d4020172cef4ca5b7b8a0860df9e12d",
+       "model_id": "eabca528c2d942bd939212645ede1e11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -518,12 +527,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3d71d6d71af4dfba679b0113d9c55d6",
+       "model_id": "4440aeea785e4ad9bcd9f6dcff17da76",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'32\\', \\'lr\\': \\'5e-05\\', \\'wd\\': …"
+       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'24\\', \\'lr\\': \\'8e-05\\', \\'wd\\': …"
       ]
      },
      "metadata": {},
