add loading saved network

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+      "C:\\Michi\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-06-08_resnet18_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel_resnormTests.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-06-10_resnet18_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel_validatePerformanceAndSaveNetwork.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,11 +62,11 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_04_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel.pickle\n",
-      "           augmented_files:               ['2023_05_21_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 2026  -  label '1': 1450\n",
+      "           participants_file:             2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle\n",
+      "           augmented_files:               ['2023_05_21_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 1013  -  label '1': 290\n",
       "           types_of_recording:            combined_breaths\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -76,27 +76,23 @@
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
       "           window_length:                 1024\n",
-      "           hop_size:                      256\n",
+      "           hop_size:                      512\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   11.61\n",
+      "           hop_size_ms:                   23.22\n",
       "           window_length_ms:              46.44\n",
-      "           duration_seconds:              2.6\n",
+      "           duration_seconds:              5.2\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
       "           model:                         ResNet\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 sigmoid_focal_loss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                17\n",
+      "           parameter runs:                1\n",
       "           folds per run:                 1\n",
-      "           epochs:                        250\n"
+      "           epochs:                        350\n"
      ]
     }
    ],
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -132,39 +128,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AddGaussianNoise</th>\n",
-       "      <th>PitchShift</th>\n",
-       "      <th>TimeStretch</th>\n",
-       "      <th>Gain</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01</td>\n",
-       "      <td>'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2</td>\n",
-       "      <td>'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05</td>\n",
-       "      <td>'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     AddGaussianNoise  \\\n",
-       "0  'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01   \n",
-       "\n",
-       "                                                    PitchShift  \\\n",
-       "0  'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2   \n",
-       "\n",
-       "                                              TimeStretch  \\\n",
-       "0  'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05   \n",
-       "\n",
-       "                                                              Gain  \n",
-       "0  'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12  "
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -183,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'sigmoid_focal_loss'}\n"
      ]
     },
@@ -191,13 +168,13 @@
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_04_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmel.pickle',\n",
-       " 'augmented_files': ['2023_05_21_logmel_combined_breaths_NEW_11msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
-       " 'train_set_label_counts': \"label '0': 2026  -  label '1': 1450\",\n",
+       " 'participants_file': '2023_05_02_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': ['2023_05_21_logmel_combined_breaths_NEW_23msHop_46msFFT_fmax11000_224logmelaugmented.pickle'],\n",
+       " 'train_set_label_counts': \"label '0': 1013  -  label '1': 290\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9abfa9c4606f4d9eb8001e52994eac8a",
+       "model_id": "6ac2b37343084fc8976194d22c9185e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -291,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa5e0394f5f84e6c8d1d270b032bc2e6",
+       "model_id": "7da2b597141a451ca2fc1f49fb1a3ee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,23 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c1e38a7cf014c37aebc4701e9199075",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\u001b[39;00m\n\u001b[0;32m      2\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[1;32m----> 3\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mboxplot_run_statistics, metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used,\n\u001b[0;32m      6\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m      7\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby,\n\u001b[0;32m      8\u001b[0m                      sort_by_current_metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -380,25 +354,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ad9d12dcbe7478d99d7e24bd5844992",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "options = tracker.get_only_varied_hyperparam_columns()\n",
     "dropdown_groupby = widgets.Dropdown(options=options, value=options[0])\n",
@@ -423,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -453,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -464,23 +423,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eabca528c2d942bd939212645ede1e11",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='mode', options=('eval', 'train'), value='eval'), Dropdown(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m options \u001b[38;5;241m=\u001b[39m tracker\u001b[38;5;241m.\u001b[39mget_only_varied_hyperparam_columns()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# if len(options) == 0:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#     options = [None]\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m dropdown_colorby \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mDropdown(options\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39moptions], value\u001b[38;5;241m=\u001b[39moptions[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      5\u001b[0m _ \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39minteract(tracker\u001b[38;5;241m.\u001b[39mshow_all_runs, \n\u001b[0;32m      6\u001b[0m                      mode\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m], \n\u001b[0;32m      7\u001b[0m                      metric\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mmetrics_used, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m                      show_n_best_runs\u001b[38;5;241m=\u001b[39mwidgets\u001b[38;5;241m.\u001b[39mIntSlider(value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, \u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39mtracker\u001b[38;5;241m.\u001b[39mn_hyperparameter_runs),\n\u001b[0;32m     12\u001b[0m                      color_by_hyperparameter\u001b[38;5;241m=\u001b[39mdropdown_colorby)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -500,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -518,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -527,12 +483,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4440aeea785e4ad9bcd9f6dcff17da76",
+       "model_id": "a09ce41251824557b57d5b31fad1b62b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'24\\', \\'lr\\': \\'8e-05\\', \\'wd\\': …"
+       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'64\\', \\'lr\\': \\'0.0005\\', \\'wd\\':…"
       ]
      },
      "metadata": {},
@@ -784,9 +740,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
